# buffer-trigger

./: Cargo.toml  readme-zh.md  readme.md
.github/workflows/: rust.yml
src/: lib.rs  simple_buffer_trigger.rs
src/async_buffer_trigger/: builder.rs  mod.rs
src/buffer_trigger_async/: mod.rs  simple.rs
src/buffer_trigger_async/general/: builder.rs  mod.rs
src/buffer_trigger_sync/: mod.rs  simple.rs
src/buffer_trigger_sync/general/: builder.rs  mod.rs
src/simple_buffer_trigger/: builder.rs  mod.rs
tests/: integration_test.rs
