[package]
name = "buffer-trigger"
version = "0.5.0"
authors = ["liangyongrui <leungyongrui@gmail.com>"]
edition = "2018"
description = "A data collection trigger based on the maximum number and refresh time"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liangyongrui/buffer-trigger"
readme = "readme.md"
keywords = ['buffer', 'trigger']
categories = ['buffer', 'trigger']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
async-std = { version = "1.6", features = ["unstable", "attributes"] }

[dev-dependencies]
lazy_static = "1.4"
env_logger = "0.7"
